--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ pico_sdk_init()
 #include(example_auto_set_url.cmake)
 # Add blink example
 add_subdirectory(blinky)
+add_subdirectory(serialtest)
+
 
 add_compile_options(-Wall
         -Wno-format          # int != int32_t as far as the compiler is concerned because gcc has int32_t as long int
